[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glue_hyvideo"
version = "0.0.1"
authors = [
  { name="Yosshi999", email="Yosshi999@users.noreply.github.com" }
]
description = "Glue the boundaries of latents to enable looped video generation of Diffuser-based Hunyuan Video 1.5."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3"
]
dependencies = [
  "diffusers>=0.36.0"
]